tests/decompile-test/errors/null_and_undefined.ts
// @case: assigning null to an initialized variable
{
    let x = 0;
    x = null;
}

// @case: assigning undefined to an initialized variable
{
    let x = 0;
    x = undefined;
}